--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -273,6 +273,7 @@
 
     <!--Dialog box-->
     <string name="loading">Loading</string>
+    <string name="error_no_internet" translatable="false">No internet connection. Try again…</string>
 
 
 </resources>
